<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_category_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/category_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:inputType="text"
            android:autofillHints="" />

        <EditText
            android:id="@+id/et_category_description"
            android:layout_width="0dp"
            android:layout_height="325dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/category_description"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/et_category_name"
            app:layout_constraintStart_toStartOf="@+id/et_category_name"
            app:layout_constraintTop_toBottomOf="@+id/et_category_name"
            app:layout_constraintVertical_bias="0.0"
            android:autofillHints="" />

        <Button
            android:id="@+id/btn_category_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/save"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_category_cancel"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_category_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_category_name"
            app:layout_constraintTop_toBottomOf="@+id/et_category_description" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>